# mcp_project

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  test.py
agents/: corporate_agent.py  economic_agent.py  news_agent.py
mcp_servers/: corporate_server.py  economic_server.py  news_server.py
supervisor/: supervisor_agent.py
